--- a/style.css
+++ b/style.css
@@ -5,52 +5,48 @@
 
 h1 {
   text-align: center;
+  color: yellow;
+  background-color: red;
+  font-family: "Times New Roman", Times, serif;
+}
+
+h2 {
+  text-align: center;
+  color: red;
 }
 
 table,
 td,
-th {
+tr {
   border: 1px solid black;
 }
 
-.first-row {
+.tr-row-title {
   text-align: center;
   padding: 0;
+  font-weight: bolder;
+  color: aliceblue;
+  background-color: rgb(22, 22, 0);
 }
 
 table {
   width: 100%;
   height: 100%;
-  border-collapse: collapse;
-}
-
-.first-column {
-  width: 10%;
-  padding: 0;
+  /* border-collapse: collapse; */
 }
 
 button {
   width: 100%;
   height: 100%;
-}
-
-.second-column {
-  width: 35%;
-}
-
-.third-column {
-  width: 20%;
-}
-
-.fourth-column {
-  width: 10%;
-}
-
-.fifth-column {
-  width: 20%;
+  padding: 1;
+  border: 1px;
 }
 
 td {
-  text-align: left;
-  padding: 5px;
+  text-align: center;
+  padding: 3px;
+}
+
+tr {
+  height:30px;
 }
